--- a/weather-app/public/index.html
+++ b/weather-app/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFF9iEO5hG0Lo3bi_udgnOLxU6WW2cxDY&libraries=places"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFF9iEO5hG0Lo3bi_udgnOLxU6WW2cxDY&libraries=places"></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
